--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "graphql": "^16.12.0",
     "jsonwebtoken": "^9.0.3"
   },
