--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "@libsql/client": "^0.15.15",
+    "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
