feat: implement login and register with zod validation
- create button and input shadcn components
- add zod schemas for login and register with validation
- implement login with react hook form and zod resolver
- implement register with password confirmation validation
- add cn utility for tailwind class merging
- create comprehensive readme with feature checkboxes
- all forms use strict type safety with ReturnType pattern

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "@apollo/client": "^4.0.11",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.12.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
     "react-router-dom": "^7.11.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
