feat: add seed script and improve category UI
refactor(category): update UI with new tag component and colors
fix(category): delete related transactions when deleting category
style(transactions): update type icons and amount display
feat(transactions): add "All" option to period filter
chore: add seed script to package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/main.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "seed": "tsx src/scripts/seed.ts"
   },
   "keywords": [
     "graphql",
